// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DateRange.Picker > should render 1`] = `
<div
  aria-label="Date picker"
  class="_container_448ffb"
  tabindex="-1"
>
  <div
    class="_container_75af3f"
  >
    <div
      class="_header_75af3f"
    >
      <div
        class="_element-container_75af3f _left_75af3f"
      >
        <button
          aria-describedby="id-00000000-0000-4000-8000-000000000000"
          aria-label="Go to previous month"
          class="_clickable_5222c6 _buttonIcon_5aa719 _size_S_5aa719"
          tabindex="-1"
          type="button"
        >
          <span
            aria-hidden="true"
            class="_buttonIcon__icon_5aa719"
          >
            <svg
              aria-hidden="true"
              pointer-events="none"
              shape-rendering="geometricPrecision"
              style="width: 1rem; height: 1rem;"
            >
              <use
                xlink:href="#arrow-left:M"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="_element-container_75af3f _middle_75af3f"
      >
        <div
          class="_common_901194"
        >
          <div
            class="_month_901194"
          >
            <button
              aria-label="Switch to month view"
              class="btn-tertiary btn-info btn btn-default"
              tabindex="-1"
              type="button"
            >
              <span>
                January
              </span>
            </button>
          </div>
          <div
            class="dropdown btn-group btn-group-default"
          >
            <button
              aria-expanded="false"
              aria-haspopup="true"
              aria-label="2007"
              class="_tc-dropdown-button_8ebcb7 tc-dropdown-button btn-tertiary btn-info dropdown-toggle btn btn-default"
              i18n="[object Object]"
              role="button"
              type="button"
            >
              <span
                class="tc-dropdown-button-title-label"
              >
                2007
              </span>
              <svg
                aria-hidden="true"
                class="tc-svg-icon tc-icon _svg_bf5f45 _tc-dropdown-caret_8ebcb7 tc-icon-name-talend-caret-down"
                focusable="false"
                name="talend-caret-down"
                pointer-events="none"
                shape-rendering="geometricPrecision"
              />
            </button>
            <ul
              class="dropdown-menu"
              role="menu"
            >
              <div
                class="_year-picker_b52113"
              >
                <button
                  aria-describedby="00000000-0000-4000-8000-000000000000"
                  aria-label="Go to previous year"
                  class="_scroll_b52113 _scroll-up_b52113 tc-date-picker-scroll-up btn-icon-only btn btn-link"
                  role="link"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="tc-svg-icon tc-icon _svg_bf5f45 tc-icon-name-talend-chevron-left _rotate-90_bf5f45"
                    focusable="false"
                    name="talend-chevron-left"
                    pointer-events="none"
                    shape-rendering="geometricPrecision"
                  />
                </button>
                <ol>
                  <li>
                    <button
                      class="_year_b52113 tc-date-picker-year"
                      tabindex="-1"
                      type="button"
                    >
                      2023
                    </button>
                  </li>
                  <li>
                    <button
                      class="_year_b52113 tc-date-picker-year"
                      tabindex="-1"
                      type="button"
                    >
                      2024
                    </button>
                  </li>
                  <li>
                    <button
                      class="_year_b52113 tc-date-picker-year"
                      tabindex="-1"
                      type="button"
                    >
                      2025
                    </button>
                  </li>
                  <li>
                    <button
                      class="_year_b52113 tc-date-picker-year"
                      tabindex="0"
                      type="button"
                    >
                      2026
                    </button>
                  </li>
                  <li>
                    <button
                      class="_year_b52113 tc-date-picker-year"
                      tabindex="-1"
                      type="button"
                    >
                      2027
                    </button>
                  </li>
                  <li>
                    <button
                      class="_year_b52113 tc-date-picker-year"
                      tabindex="-1"
                      type="button"
                    >
                      2028
                    </button>
                  </li>
                  <li>
                    <button
                      class="_year_b52113 tc-date-picker-year"
                      tabindex="-1"
                      type="button"
                    >
                      2029
                    </button>
                  </li>
                </ol>
                <button
                  aria-describedby="00000000-0000-4000-8000-000000000000"
                  aria-label="Go to next year"
                  class="_scroll_b52113 _scroll-down_b52113 tc-date-picker-scroll-down btn-icon-only btn btn-link"
                  role="link"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="tc-svg-icon tc-icon _svg_bf5f45 tc-icon-name-talend-chevron-left _rotate-270_bf5f45"
                    focusable="false"
                    name="talend-chevron-left"
                    pointer-events="none"
                    shape-rendering="geometricPrecision"
                  />
                </button>
              </div>
            </ul>
          </div>
        </div>
      </div>
      <div
        class="_element-container_75af3f _right_75af3f"
      >
        <button
          aria-describedby="id-00000000-0000-4000-8000-000000000000"
          aria-label="Go to next month"
          class="_clickable_5222c6 _buttonIcon_5aa719 _size_S_5aa719"
          tabindex="-1"
          type="button"
        >
          <span
            aria-hidden="true"
            class="_buttonIcon__icon_5aa719"
          >
            <svg
              aria-hidden="true"
              pointer-events="none"
              shape-rendering="geometricPrecision"
              style="width: 1rem; height: 1rem;"
            >
              <use
                xlink:href="#arrow-right:M"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      class="_element-container_75af3f _body_75af3f"
    >
      <div
        class="_body_ba832b"
      >
        <div
          class="_date_ba832b"
        >
          <div>
            <table
              class="_container_804025"
            >
              <caption
                class="sr-only"
              >
                January 2007
              </caption>
              <thead>
                <tr
                  class="_calendar-header_804025"
                >
                  <th
                    scope="col"
                  >
                    <abbr
                      title="Monday"
                    >
                      M
                    </abbr>
                    <hr
                      aria-orientation="horizontal"
                      class="_divider_53cf73"
                    />
                  </th>
                  <th
                    scope="col"
                  >
                    <abbr
                      title="Tuesday"
                    >
                      T
                    </abbr>
                    <hr
                      aria-orientation="horizontal"
                      class="_divider_53cf73"
                    />
                  </th>
                  <th
                    scope="col"
                  >
                    <abbr
                      title="Wednesday"
                    >
                      W
                    </abbr>
                    <hr
                      aria-orientation="horizontal"
                      class="_divider_53cf73"
                    />
                  </th>
                  <th
                    scope="col"
                  >
                    <abbr
                      title="Thursday"
                    >
                      T
                    </abbr>
                    <hr
                      aria-orientation="horizontal"
                      class="_divider_53cf73"
                    />
                  </th>
                  <th
                    scope="col"
                  >
                    <abbr
                      title="Friday"
                    >
                      F
                    </abbr>
                    <hr
                      aria-orientation="horizontal"
                      class="_divider_53cf73"
                    />
                  </th>
                  <th
                    scope="col"
                  >
                    <abbr
                      title="Saturday"
                    >
                      S
                    </abbr>
                    <hr
                      aria-orientation="horizontal"
                      class="_divider_53cf73"
                    />
                  </th>
                  <th
                    scope="col"
                  >
                    <abbr
                      title="Sunday"
                    >
                      S
                    </abbr>
                    <hr
                      aria-orientation="horizontal"
                      class="_divider_53cf73"
                    />
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr
                  class="_calendar-row_804025 tc-date-picker-calendar-row"
                >
                  <td
                    class="_calendar-col_804025"
                  >
                    <button
                      aria-label="Monday 01 January 2007"
                      class="_calendar-day_804025 tc-date-picker-day"
                      data-value="1"
                      tabindex="-1"
                      type="button"
                    >
                      1
                    </button>
                  </td>
                  <td
                    aria-current="date"
                    class="_calendar-col_804025 _date-range_804025 _range-start_804025"
                  >
                    <button
                      aria-label="Range: start date, Tuesday 02 January 2007, selected"
                      class="_calendar-day_804025 _selected_804025 tc-date-picker-day"
                      data-value="2"
                      tabindex="-1"
                      type="button"
                    >
                      2
                    </button>
                  </td>
                  <td
                    class="_calendar-col_804025 _date-range_804025 _range-middle_804025"
                  >
                    <button
                      aria-label="Included in range, Wednesday 03 January 2007"
                      class="_calendar-day_804025 _range_804025 tc-date-picker-day"
                      data-value="3"
                      tabindex="-1"
                      type="button"
                    >
                      3
                    </button>
                  </td>
                  <td
                    class="_calendar-col_804025 _date-range_804025 _range-middle_804025"
                  >
                    <button
                      aria-label="Included in range, Thursday 04 January 2007"
                      class="_calendar-day_804025 _range_804025 tc-date-picker-day"
                      data-value="4"
                      tabindex="-1"
                      type="button"
                    >
                      4
                    </button>
                  </td>
                  <td
                    class="_calendar-col_804025 _date-range_804025 _range-middle_804025"
                  >
                    <button
                      aria-label="Included in range, Friday 05 January 2007"
                      class="_calendar-day_804025 _range_804025 tc-date-picker-day"
                      data-value="5"
                      tabindex="-1"
                      type="button"
                    >
                      5
                    </button>
                  </td>
                  <td
                    class="_calendar-col_804025 _date-range_804025 _range-middle_804025"
                  >
                    <button
                      aria-label="Included in range, Saturday 06 January 2007"
                      class="_calendar-day_804025 _range_804025 tc-date-picker-day"
                      data-value="6"
                      tabindex="-1"
                      type="button"
                    >
                      6
                    </button>
                  </td>
                  <td
                    class="_calendar-col_804025 _date-range_804025 _range-middle_804025"
                  >
                    <button
                      aria-label="Included in range, Sunday 07 January 2007"
                      class="_calendar-day_804025 _range_804025 tc-date-picker-day"
                      data-value="7"
                      tabindex="-1"
                      type="button"
                    >
                      7
                    </button>
                  </td>
                </tr>
                <tr
                  class="_calendar-row_804025 tc-date-picker-calendar-row"
                >
                  <td
                    class="_calendar-col_804025 _date-range_804025 _range-middle_804025"
                  >
                    <button
                      aria-label="Included in range, Monday 08 January 2007"
                      class="_calendar-day_804025 _range_804025 tc-date-picker-day"
                      data-value="8"
                      tabindex="-1"
                      type="button"
                    >
                      8
                    </button>
                  </td>
                  <td
                    class="_calendar-col_804025 _date-range_804025 _range-middle_804025"
                  >
                    <button
                      aria-label="Included in range, Tuesday 09 January 2007"
                      class="_calendar-day_804025 _range_804025 tc-date-picker-day"
                      data-value="9"
                      tabindex="-1"
                      type="button"
                    >
                      9
                    </button>
                  </td>
                  <td
                    class="_calendar-col_804025 _date-range_804025 _range-middle_804025"
                  >
                    <button
                      aria-label="Included in range, Wednesday 10 January 2007"
                      class="_calendar-day_804025 _range_804025 tc-date-picker-day"
                      data-value="10"
                      tabindex="-1"
                      type="button"
                    >
                      10
                    </button>
                  </td>
                  <td
                    class="_calendar-col_804025 _date-range_804025 _range-middle_804025"
                  >
                    <button
                      aria-label="Included in range, Thursday 11 January 2007"
                      class="_calendar-day_804025 _range_804025 tc-date-picker-day"
                      data-value="11"
                      tabindex="-1"
                      type="button"
                    >
                      11
                    </button>
                  </td>
                  <td
                    class="_calendar-col_804025 _date-range_804025 _range-middle_804025"
                  >
                    <button
                      aria-label="Included in range, Friday 12 January 2007"
                      class="_calendar-day_804025 _range_804025 tc-date-picker-day"
                      data-value="12"
                      tabindex="-1"
                      type="button"
                    >
                      12
                    </button>
                  </td>
                  <td
                    class="_calendar-col_804025 _date-range_804025 _range-middle_804025"
                  >
                    <button
                      aria-label="Included in range, Saturday 13 January 2007"
                      class="_calendar-day_804025 _range_804025 tc-date-picker-day"
                      data-value="13"
                      tabindex="-1"
                      type="button"
                    >
                      13
                    </button>
                  </td>
                  <td
                    class="_calendar-col_804025 _date-range_804025 _range-middle_804025"
                  >
                    <button
                      aria-label="Included in range, Sunday 14 January 2007"
                      class="_calendar-day_804025 _range_804025 tc-date-picker-day"
                      data-value="14"
                      tabindex="-1"
                      type="button"
                    >
                      14
                    </button>
                  </td>
                </tr>
                <tr
                  class="_calendar-row_804025 tc-date-picker-calendar-row"
                >
                  <td
                    class="_calendar-col_804025 _date-range_804025 _range-middle_804025"
                  >
                    <button
                      aria-label="Included in range, Monday 15 January 2007"
                      class="_calendar-day_804025 _range_804025 tc-date-picker-day"
                      data-value="15"
                      tabindex="-1"
                      type="button"
                    >
                      15
                    </button>
                  </td>
                  <td
                    class="_calendar-col_804025 _date-range_804025 _range-middle_804025"
                  >
                    <button
                      aria-label="Included in range, Tuesday 16 January 2007"
                      class="_calendar-day_804025 _range_804025 tc-date-picker-day"
                      data-value="16"
                      tabindex="-1"
                      type="button"
                    >
                      16
                    </button>
                  </td>
                  <td
                    class="_calendar-col_804025 _date-range_804025 _range-middle_804025"
                  >
                    <button
                      aria-label="Included in range, Wednesday 17 January 2007"
                      class="_calendar-day_804025 _range_804025 tc-date-picker-day"
                      data-value="17"
                      tabindex="-1"
                      type="button"
                    >
                      17
                    </button>
                  </td>
                  <td
                    class="_calendar-col_804025 _date-range_804025 _range-middle_804025"
                  >
                    <button
                      aria-label="Included in range, Thursday 18 January 2007"
                      class="_calendar-day_804025 _range_804025 tc-date-picker-day"
                      data-value="18"
                      tabindex="-1"
                      type="button"
                    >
                      18
                    </button>
                  </td>
                  <td
                    class="_calendar-col_804025 _date-range_804025 _range-middle_804025"
                  >
                    <button
                      aria-label="Included in range, Friday 19 January 2007"
                      class="_calendar-day_804025 _range_804025 tc-date-picker-day"
                      data-value="19"
                      tabindex="-1"
                      type="button"
                    >
                      19
                    </button>
                  </td>
                  <td
                    class="_calendar-col_804025 _date-range_804025 _range-middle_804025"
                  >
                    <button
                      aria-label="Included in range, Saturday 20 January 2007"
                      class="_calendar-day_804025 _range_804025 tc-date-picker-day"
                      data-value="20"
                      tabindex="-1"
                      type="button"
                    >
                      20
                    </button>
                  </td>
                  <td
                    class="_calendar-col_804025 _date-range_804025 _range-middle_804025"
                  >
                    <button
                      aria-label="Included in range, Sunday 21 January 2007"
                      class="_calendar-day_804025 _range_804025 tc-date-picker-day"
                      data-value="21"
                      tabindex="-1"
                      type="button"
                    >
                      21
                    </button>
                  </td>
                </tr>
                <tr
                  class="_calendar-row_804025 tc-date-picker-calendar-row"
                >
                  <td
                    class="_calendar-col_804025 _date-range_804025 _range-middle_804025"
                  >
                    <button
                      aria-label="Included in range, Monday 22 January 2007"
                      class="_calendar-day_804025 _range_804025 tc-date-picker-day"
                      data-value="22"
                      tabindex="-1"
                      type="button"
                    >
                      22
                    </button>
                  </td>
                  <td
                    class="_calendar-col_804025 _date-range_804025 _range-middle_804025"
                  >
                    <button
                      aria-label="Included in range, Tuesday 23 January 2007"
                      class="_calendar-day_804025 _range_804025 tc-date-picker-day"
                      data-value="23"
                      tabindex="-1"
                      type="button"
                    >
                      23
                    </button>
                  </td>
                  <td
                    class="_calendar-col_804025 _date-range_804025 _range-middle_804025"
                  >
                    <button
                      aria-label="Included in range, Wednesday 24 January 2007"
                      class="_calendar-day_804025 _range_804025 tc-date-picker-day"
                      data-value="24"
                      tabindex="-1"
                      type="button"
                    >
                      24
                    </button>
                  </td>
                  <td
                    class="_calendar-col_804025 _date-range_804025 _range-middle_804025"
                  >
                    <button
                      aria-label="Included in range, Thursday 25 January 2007"
                      class="_calendar-day_804025 _range_804025 tc-date-picker-day"
                      data-value="25"
                      tabindex="-1"
                      type="button"
                    >
                      25
                    </button>
                  </td>
                  <td
                    class="_calendar-col_804025 _date-range_804025 _range-middle_804025"
                  >
                    <button
                      aria-label="Included in range, Friday 26 January 2007"
                      class="_calendar-day_804025 _range_804025 tc-date-picker-day"
                      data-value="26"
                      tabindex="-1"
                      type="button"
                    >
                      26
                    </button>
                  </td>
                  <td
                    class="_calendar-col_804025 _date-range_804025 _range-middle_804025"
                  >
                    <button
                      aria-label="Included in range, Saturday 27 January 2007"
                      class="_calendar-day_804025 _range_804025 tc-date-picker-day"
                      data-value="27"
                      tabindex="-1"
                      type="button"
                    >
                      27
                    </button>
                  </td>
                  <td
                    class="_calendar-col_804025 _date-range_804025 _range-middle_804025"
                  >
                    <button
                      aria-label="Included in range, Sunday 28 January 2007"
                      class="_calendar-day_804025 _range_804025 tc-date-picker-day"
                      data-value="28"
                      tabindex="-1"
                      type="button"
                    >
                      28
                    </button>
                  </td>
                </tr>
                <tr
                  class="_calendar-row_804025 tc-date-picker-calendar-row"
                >
                  <td
                    class="_calendar-col_804025 _date-range_804025 _range-middle_804025"
                  >
                    <button
                      aria-label="Included in range, Monday 29 January 2007"
                      class="_calendar-day_804025 _range_804025 tc-date-picker-day"
                      data-value="29"
                      tabindex="-1"
                      type="button"
                    >
                      29
                    </button>
                  </td>
                  <td
                    class="_calendar-col_804025 _date-range_804025 _range-middle_804025"
                  >
                    <button
                      aria-label="Included in range, Tuesday 30 January 2007"
                      class="_calendar-day_804025 _range_804025 tc-date-picker-day"
                      data-value="30"
                      tabindex="-1"
                      type="button"
                    >
                      30
                    </button>
                  </td>
                  <td
                    class="_calendar-col_804025 _date-range_804025 _range-middle_804025"
                  >
                    <button
                      aria-label="Included in range, Wednesday 31 January 2007"
                      class="_calendar-day_804025 _range_804025 tc-date-picker-day"
                      data-value="31"
                      tabindex="-1"
                      type="button"
                    >
                      31
                    </button>
                  </td>
                  <td
                    class="_calendar-col_804025 _date-range_804025 _range-middle_804025"
                  >
                    <button
                      aria-label="Included in range, Thursday 01 February 2007"
                      class="_calendar-day_804025 _range_804025 _not-current-month_804025 tc-date-picker-day"
                      tabindex="-1"
                      type="button"
                    >
                      1
                    </button>
                  </td>
                  <td
                    class="_calendar-col_804025 _date-range_804025 _range-end_804025"
                  >
                    <button
                      aria-label="Range: end date, Friday 02 February 2007"
                      class="_calendar-day_804025 _selected_804025 _not-current-month_804025 tc-date-picker-day"
                      tabindex="-1"
                      type="button"
                    >
                      2
                    </button>
                  </td>
                  <td
                    class="_calendar-col_804025"
                  >
                    <button
                      aria-label="Saturday 03 February 2007"
                      class="_calendar-day_804025 _not-current-month_804025 tc-date-picker-day"
                      tabindex="-1"
                      type="button"
                    >
                      3
                    </button>
                  </td>
                  <td
                    class="_calendar-col_804025"
                  >
                    <button
                      aria-label="Sunday 04 February 2007"
                      class="_calendar-day_804025 _not-current-month_804025 tc-date-picker-day"
                      tabindex="-1"
                      type="button"
                    >
                      4
                    </button>
                  </td>
                </tr>
                <tr
                  class="_calendar-row_804025 tc-date-picker-calendar-row"
                >
                  <td
                    class="_calendar-col_804025"
                  >
                    <button
                      aria-label="Monday 05 February 2007"
                      class="_calendar-day_804025 _not-current-month_804025 tc-date-picker-day"
                      tabindex="-1"
                      type="button"
                    >
                      5
                    </button>
                  </td>
                  <td
                    class="_calendar-col_804025"
                  >
                    <button
                      aria-label="Tuesday 06 February 2007"
                      class="_calendar-day_804025 _not-current-month_804025 tc-date-picker-day"
                      tabindex="-1"
                      type="button"
                    >
                      6
                    </button>
                  </td>
                  <td
                    class="_calendar-col_804025"
                  >
                    <button
                      aria-label="Wednesday 07 February 2007"
                      class="_calendar-day_804025 _not-current-month_804025 tc-date-picker-day"
                      tabindex="-1"
                      type="button"
                    >
                      7
                    </button>
                  </td>
                  <td
                    class="_calendar-col_804025"
                  >
                    <button
                      aria-label="Thursday 08 February 2007"
                      class="_calendar-day_804025 _not-current-month_804025 tc-date-picker-day"
                      tabindex="-1"
                      type="button"
                    >
                      8
                    </button>
                  </td>
                  <td
                    class="_calendar-col_804025"
                  >
                    <button
                      aria-label="Friday 09 February 2007"
                      class="_calendar-day_804025 _not-current-month_804025 tc-date-picker-day"
                      tabindex="-1"
                      type="button"
                    >
                      9
                    </button>
                  </td>
                  <td
                    class="_calendar-col_804025"
                  >
                    <button
                      aria-label="Saturday 10 February 2007"
                      class="_calendar-day_804025 _not-current-month_804025 tc-date-picker-day"
                      tabindex="-1"
                      type="button"
                    >
                      10
                    </button>
                  </td>
                  <td
                    class="_calendar-col_804025"
                  >
                    <button
                      aria-label="Sunday 11 February 2007"
                      class="_calendar-day_804025 _not-current-month_804025 tc-date-picker-day"
                      tabindex="-1"
                      type="button"
                    >
                      11
                    </button>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
  <hr
    aria-orientation="horizontal"
    class="_divider_53cf73"
  />
  <div
    class="_footer_448ffb"
  >
    <button
      aria-label="Pick Today"
      class="btn-tertiary btn-info btn btn-default"
      tabindex="-1"
      type="button"
    >
      <span>
        Today
      </span>
    </button>
  </div>
</div>
`;

exports[`DateRange.Picker should render 1`] = `
<div
  aria-label="Date picker"
  class="theme-container"
  tabindex="-1"
>
  <div
    class="theme-container"
  >
    <div
      class="theme-header"
    >
      <div
        class="theme-element-container theme-left"
      >
        <span
          class="CoralButtonIcon"
          icon="arrow-left"
          tabindex="-1"
        >
          Go to previous month
        </span>
      </div>
      <div
        class="theme-element-container theme-middle"
      >
        <div
          class="theme-common"
        >
          <div
            class="theme-month"
          >
            <button
              aria-label="Switch to month view"
              class="btn-tertiary btn-info btn btn-default"
              tabindex="-1"
              type="button"
            >
              <span>
                January
              </span>
            </button>
          </div>
          <div
            class="dropdown btn-group btn-group-default"
          >
            <button
              aria-expanded="false"
              aria-haspopup="true"
              aria-label="2007"
              class="theme-tc-dropdown-button tc-dropdown-button btn-tertiary btn-info dropdown-toggle btn btn-default"
              role="button"
              type="button"
            >
              <span
                class="tc-dropdown-button-title-label"
              >
                2007
              </span>
              <span
                class="CoralIcon theme-tc-dropdown-caret"
                name="talend-caret-down"
              />
            </button>
            <ul
              class="dropdown-menu"
              role="menu"
            >
              <div
                class="theme-year-picker"
              >
                <button
                  aria-describedby="42"
                  aria-label="Go to previous year"
                  class="theme-scroll theme-scroll-up tc-date-picker-scroll-up btn-icon-only btn btn-link"
                  role="link"
                  type="button"
                >
                  <span
                    class="CoralIcon"
                    name="talend-chevron-left"
                    transform="rotate-90"
                  />
                </button>
                <ol>
                  <li>
                    <button
                      class="theme-year tc-date-picker-year"
                      tabindex="-1"
                      type="button"
                    >
                      2023
                    </button>
                  </li>
                  <li>
                    <button
                      class="theme-year tc-date-picker-year"
                      tabindex="-1"
                      type="button"
                    >
                      2024
                    </button>
                  </li>
                  <li>
                    <button
                      class="theme-year tc-date-picker-year"
                      tabindex="-1"
                      type="button"
                    >
                      2025
                    </button>
                  </li>
                  <li>
                    <button
                      class="theme-year tc-date-picker-year"
                      tabindex="0"
                      type="button"
                    >
                      2026
                    </button>
                  </li>
                  <li>
                    <button
                      class="theme-year tc-date-picker-year"
                      tabindex="-1"
                      type="button"
                    >
                      2027
                    </button>
                  </li>
                  <li>
                    <button
                      class="theme-year tc-date-picker-year"
                      tabindex="-1"
                      type="button"
                    >
                      2028
                    </button>
                  </li>
                  <li>
                    <button
                      class="theme-year tc-date-picker-year"
                      tabindex="-1"
                      type="button"
                    >
                      2029
                    </button>
                  </li>
                </ol>
                <button
                  aria-describedby="42"
                  aria-label="Go to next year"
                  class="theme-scroll theme-scroll-down tc-date-picker-scroll-down btn-icon-only btn btn-link"
                  role="link"
                  type="button"
                >
                  <span
                    class="CoralIcon"
                    name="talend-chevron-left"
                    transform="rotate-270"
                  />
                </button>
              </div>
            </ul>
          </div>
        </div>
      </div>
      <div
        class="theme-element-container theme-right"
      >
        <span
          class="CoralButtonIcon"
          icon="arrow-right"
          tabindex="-1"
        >
          Go to next month
        </span>
      </div>
    </div>
    <div
      class="theme-element-container theme-body"
    >
      <div
        class="theme-body"
      >
        <div
          class="theme-date"
        >
          <div>
            <table
              class="theme-container"
            >
              <caption
                class="sr-only"
              >
                January 2007
              </caption>
              <thead>
                <tr
                  class="theme-calendar-header"
                >
                  <th
                    scope="col"
                  >
                    <abbr
                      title="Monday"
                    >
                      M
                    </abbr>
                    <span
                      class="CoralDivider"
                    />
                  </th>
                  <th
                    scope="col"
                  >
                    <abbr
                      title="Tuesday"
                    >
                      T
                    </abbr>
                    <span
                      class="CoralDivider"
                    />
                  </th>
                  <th
                    scope="col"
                  >
                    <abbr
                      title="Wednesday"
                    >
                      W
                    </abbr>
                    <span
                      class="CoralDivider"
                    />
                  </th>
                  <th
                    scope="col"
                  >
                    <abbr
                      title="Thursday"
                    >
                      T
                    </abbr>
                    <span
                      class="CoralDivider"
                    />
                  </th>
                  <th
                    scope="col"
                  >
                    <abbr
                      title="Friday"
                    >
                      F
                    </abbr>
                    <span
                      class="CoralDivider"
                    />
                  </th>
                  <th
                    scope="col"
                  >
                    <abbr
                      title="Saturday"
                    >
                      S
                    </abbr>
                    <span
                      class="CoralDivider"
                    />
                  </th>
                  <th
                    scope="col"
                  >
                    <abbr
                      title="Sunday"
                    >
                      S
                    </abbr>
                    <span
                      class="CoralDivider"
                    />
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr
                  class="theme-calendar-row tc-date-picker-calendar-row"
                >
                  <td
                    class="theme-calendar-col"
                  >
                    <button
                      aria-label="Monday 01 January 2007"
                      class="theme-calendar-day tc-date-picker-day"
                      data-value="1"
                      tabindex="-1"
                      type="button"
                    >
                      1
                    </button>
                  </td>
                  <td
                    aria-current="date"
                    class="theme-calendar-col theme-date-range theme-range-start"
                  >
                    <button
                      aria-label="Range: start date, Tuesday 02 January 2007, selected"
                      class="theme-calendar-day theme-selected tc-date-picker-day"
                      data-value="2"
                      tabindex="-1"
                      type="button"
                    >
                      2
                    </button>
                  </td>
                  <td
                    class="theme-calendar-col theme-date-range theme-range-middle"
                  >
                    <button
                      aria-label="Included in range, Wednesday 03 January 2007"
                      class="theme-calendar-day theme-range tc-date-picker-day"
                      data-value="3"
                      tabindex="-1"
                      type="button"
                    >
                      3
                    </button>
                  </td>
                  <td
                    class="theme-calendar-col theme-date-range theme-range-middle"
                  >
                    <button
                      aria-label="Included in range, Thursday 04 January 2007"
                      class="theme-calendar-day theme-range tc-date-picker-day"
                      data-value="4"
                      tabindex="-1"
                      type="button"
                    >
                      4
                    </button>
                  </td>
                  <td
                    class="theme-calendar-col theme-date-range theme-range-middle"
                  >
                    <button
                      aria-label="Included in range, Friday 05 January 2007"
                      class="theme-calendar-day theme-range tc-date-picker-day"
                      data-value="5"
                      tabindex="-1"
                      type="button"
                    >
                      5
                    </button>
                  </td>
                  <td
                    class="theme-calendar-col theme-date-range theme-range-middle"
                  >
                    <button
                      aria-label="Included in range, Saturday 06 January 2007"
                      class="theme-calendar-day theme-range tc-date-picker-day"
                      data-value="6"
                      tabindex="-1"
                      type="button"
                    >
                      6
                    </button>
                  </td>
                  <td
                    class="theme-calendar-col theme-date-range theme-range-middle"
                  >
                    <button
                      aria-label="Included in range, Sunday 07 January 2007"
                      class="theme-calendar-day theme-range tc-date-picker-day"
                      data-value="7"
                      tabindex="-1"
                      type="button"
                    >
                      7
                    </button>
                  </td>
                </tr>
                <tr
                  class="theme-calendar-row tc-date-picker-calendar-row"
                >
                  <td
                    class="theme-calendar-col theme-date-range theme-range-middle"
                  >
                    <button
                      aria-label="Included in range, Monday 08 January 2007"
                      class="theme-calendar-day theme-range tc-date-picker-day"
                      data-value="8"
                      tabindex="-1"
                      type="button"
                    >
                      8
                    </button>
                  </td>
                  <td
                    class="theme-calendar-col theme-date-range theme-range-middle"
                  >
                    <button
                      aria-label="Included in range, Tuesday 09 January 2007"
                      class="theme-calendar-day theme-range tc-date-picker-day"
                      data-value="9"
                      tabindex="-1"
                      type="button"
                    >
                      9
                    </button>
                  </td>
                  <td
                    class="theme-calendar-col theme-date-range theme-range-middle"
                  >
                    <button
                      aria-label="Included in range, Wednesday 10 January 2007"
                      class="theme-calendar-day theme-range tc-date-picker-day"
                      data-value="10"
                      tabindex="-1"
                      type="button"
                    >
                      10
                    </button>
                  </td>
                  <td
                    class="theme-calendar-col theme-date-range theme-range-middle"
                  >
                    <button
                      aria-label="Included in range, Thursday 11 January 2007"
                      class="theme-calendar-day theme-range tc-date-picker-day"
                      data-value="11"
                      tabindex="-1"
                      type="button"
                    >
                      11
                    </button>
                  </td>
                  <td
                    class="theme-calendar-col theme-date-range theme-range-middle"
                  >
                    <button
                      aria-label="Included in range, Friday 12 January 2007"
                      class="theme-calendar-day theme-range tc-date-picker-day"
                      data-value="12"
                      tabindex="-1"
                      type="button"
                    >
                      12
                    </button>
                  </td>
                  <td
                    class="theme-calendar-col theme-date-range theme-range-middle"
                  >
                    <button
                      aria-label="Included in range, Saturday 13 January 2007"
                      class="theme-calendar-day theme-range tc-date-picker-day"
                      data-value="13"
                      tabindex="-1"
                      type="button"
                    >
                      13
                    </button>
                  </td>
                  <td
                    class="theme-calendar-col theme-date-range theme-range-middle"
                  >
                    <button
                      aria-label="Included in range, Sunday 14 January 2007"
                      class="theme-calendar-day theme-range tc-date-picker-day"
                      data-value="14"
                      tabindex="-1"
                      type="button"
                    >
                      14
                    </button>
                  </td>
                </tr>
                <tr
                  class="theme-calendar-row tc-date-picker-calendar-row"
                >
                  <td
                    class="theme-calendar-col theme-date-range theme-range-middle"
                  >
                    <button
                      aria-label="Included in range, Monday 15 January 2007"
                      class="theme-calendar-day theme-range tc-date-picker-day"
                      data-value="15"
                      tabindex="-1"
                      type="button"
                    >
                      15
                    </button>
                  </td>
                  <td
                    class="theme-calendar-col theme-date-range theme-range-middle"
                  >
                    <button
                      aria-label="Included in range, Tuesday 16 January 2007"
                      class="theme-calendar-day theme-range tc-date-picker-day"
                      data-value="16"
                      tabindex="-1"
                      type="button"
                    >
                      16
                    </button>
                  </td>
                  <td
                    class="theme-calendar-col theme-date-range theme-range-middle"
                  >
                    <button
                      aria-label="Included in range, Wednesday 17 January 2007"
                      class="theme-calendar-day theme-range tc-date-picker-day"
                      data-value="17"
                      tabindex="-1"
                      type="button"
                    >
                      17
                    </button>
                  </td>
                  <td
                    class="theme-calendar-col theme-date-range theme-range-middle"
                  >
                    <button
                      aria-label="Included in range, Thursday 18 January 2007"
                      class="theme-calendar-day theme-range tc-date-picker-day"
                      data-value="18"
                      tabindex="-1"
                      type="button"
                    >
                      18
                    </button>
                  </td>
                  <td
                    class="theme-calendar-col theme-date-range theme-range-middle"
                  >
                    <button
                      aria-label="Included in range, Friday 19 January 2007"
                      class="theme-calendar-day theme-range tc-date-picker-day"
                      data-value="19"
                      tabindex="-1"
                      type="button"
                    >
                      19
                    </button>
                  </td>
                  <td
                    class="theme-calendar-col theme-date-range theme-range-middle"
                  >
                    <button
                      aria-label="Included in range, Saturday 20 January 2007"
                      class="theme-calendar-day theme-range tc-date-picker-day"
                      data-value="20"
                      tabindex="-1"
                      type="button"
                    >
                      20
                    </button>
                  </td>
                  <td
                    class="theme-calendar-col theme-date-range theme-range-middle"
                  >
                    <button
                      aria-label="Included in range, Sunday 21 January 2007"
                      class="theme-calendar-day theme-range tc-date-picker-day"
                      data-value="21"
                      tabindex="-1"
                      type="button"
                    >
                      21
                    </button>
                  </td>
                </tr>
                <tr
                  class="theme-calendar-row tc-date-picker-calendar-row"
                >
                  <td
                    class="theme-calendar-col theme-date-range theme-range-middle"
                  >
                    <button
                      aria-label="Included in range, Monday 22 January 2007"
                      class="theme-calendar-day theme-range tc-date-picker-day"
                      data-value="22"
                      tabindex="-1"
                      type="button"
                    >
                      22
                    </button>
                  </td>
                  <td
                    class="theme-calendar-col theme-date-range theme-range-middle"
                  >
                    <button
                      aria-label="Included in range, Tuesday 23 January 2007"
                      class="theme-calendar-day theme-range tc-date-picker-day"
                      data-value="23"
                      tabindex="-1"
                      type="button"
                    >
                      23
                    </button>
                  </td>
                  <td
                    class="theme-calendar-col theme-date-range theme-range-middle"
                  >
                    <button
                      aria-label="Included in range, Wednesday 24 January 2007"
                      class="theme-calendar-day theme-range tc-date-picker-day"
                      data-value="24"
                      tabindex="-1"
                      type="button"
                    >
                      24
                    </button>
                  </td>
                  <td
                    class="theme-calendar-col theme-date-range theme-range-middle"
                  >
                    <button
                      aria-label="Included in range, Thursday 25 January 2007"
                      class="theme-calendar-day theme-range tc-date-picker-day"
                      data-value="25"
                      tabindex="-1"
                      type="button"
                    >
                      25
                    </button>
                  </td>
                  <td
                    class="theme-calendar-col theme-date-range theme-range-middle"
                  >
                    <button
                      aria-label="Included in range, Friday 26 January 2007"
                      class="theme-calendar-day theme-range tc-date-picker-day"
                      data-value="26"
                      tabindex="-1"
                      type="button"
                    >
                      26
                    </button>
                  </td>
                  <td
                    class="theme-calendar-col theme-date-range theme-range-middle"
                  >
                    <button
                      aria-label="Included in range, Saturday 27 January 2007"
                      class="theme-calendar-day theme-range tc-date-picker-day"
                      data-value="27"
                      tabindex="-1"
                      type="button"
                    >
                      27
                    </button>
                  </td>
                  <td
                    class="theme-calendar-col theme-date-range theme-range-middle"
                  >
                    <button
                      aria-label="Included in range, Sunday 28 January 2007"
                      class="theme-calendar-day theme-range tc-date-picker-day"
                      data-value="28"
                      tabindex="-1"
                      type="button"
                    >
                      28
                    </button>
                  </td>
                </tr>
                <tr
                  class="theme-calendar-row tc-date-picker-calendar-row"
                >
                  <td
                    class="theme-calendar-col theme-date-range theme-range-middle"
                  >
                    <button
                      aria-label="Included in range, Monday 29 January 2007"
                      class="theme-calendar-day theme-range tc-date-picker-day"
                      data-value="29"
                      tabindex="-1"
                      type="button"
                    >
                      29
                    </button>
                  </td>
                  <td
                    class="theme-calendar-col theme-date-range theme-range-middle"
                  >
                    <button
                      aria-label="Included in range, Tuesday 30 January 2007"
                      class="theme-calendar-day theme-range tc-date-picker-day"
                      data-value="30"
                      tabindex="-1"
                      type="button"
                    >
                      30
                    </button>
                  </td>
                  <td
                    class="theme-calendar-col theme-date-range theme-range-middle"
                  >
                    <button
                      aria-label="Included in range, Wednesday 31 January 2007"
                      class="theme-calendar-day theme-range tc-date-picker-day"
                      data-value="31"
                      tabindex="-1"
                      type="button"
                    >
                      31
                    </button>
                  </td>
                  <td
                    class="theme-calendar-col theme-date-range theme-range-middle"
                  >
                    <button
                      aria-label="Included in range, Thursday 01 February 2007"
                      class="theme-calendar-day theme-range theme-not-current-month tc-date-picker-day"
                      tabindex="-1"
                      type="button"
                    >
                      1
                    </button>
                  </td>
                  <td
                    class="theme-calendar-col theme-date-range theme-range-end"
                  >
                    <button
                      aria-label="Range: end date, Friday 02 February 2007"
                      class="theme-calendar-day theme-selected theme-not-current-month tc-date-picker-day"
                      tabindex="-1"
                      type="button"
                    >
                      2
                    </button>
                  </td>
                  <td
                    class="theme-calendar-col"
                  >
                    <button
                      aria-label="Saturday 03 February 2007"
                      class="theme-calendar-day theme-not-current-month tc-date-picker-day"
                      tabindex="-1"
                      type="button"
                    >
                      3
                    </button>
                  </td>
                  <td
                    class="theme-calendar-col"
                  >
                    <button
                      aria-label="Sunday 04 February 2007"
                      class="theme-calendar-day theme-not-current-month tc-date-picker-day"
                      tabindex="-1"
                      type="button"
                    >
                      4
                    </button>
                  </td>
                </tr>
                <tr
                  class="theme-calendar-row tc-date-picker-calendar-row"
                >
                  <td
                    class="theme-calendar-col"
                  >
                    <button
                      aria-label="Monday 05 February 2007"
                      class="theme-calendar-day theme-not-current-month tc-date-picker-day"
                      tabindex="-1"
                      type="button"
                    >
                      5
                    </button>
                  </td>
                  <td
                    class="theme-calendar-col"
                  >
                    <button
                      aria-label="Tuesday 06 February 2007"
                      class="theme-calendar-day theme-not-current-month tc-date-picker-day"
                      tabindex="-1"
                      type="button"
                    >
                      6
                    </button>
                  </td>
                  <td
                    class="theme-calendar-col"
                  >
                    <button
                      aria-label="Wednesday 07 February 2007"
                      class="theme-calendar-day theme-not-current-month tc-date-picker-day"
                      tabindex="-1"
                      type="button"
                    >
                      7
                    </button>
                  </td>
                  <td
                    class="theme-calendar-col"
                  >
                    <button
                      aria-label="Thursday 08 February 2007"
                      class="theme-calendar-day theme-not-current-month tc-date-picker-day"
                      tabindex="-1"
                      type="button"
                    >
                      8
                    </button>
                  </td>
                  <td
                    class="theme-calendar-col"
                  >
                    <button
                      aria-label="Friday 09 February 2007"
                      class="theme-calendar-day theme-not-current-month tc-date-picker-day"
                      tabindex="-1"
                      type="button"
                    >
                      9
                    </button>
                  </td>
                  <td
                    class="theme-calendar-col"
                  >
                    <button
                      aria-label="Saturday 10 February 2007"
                      class="theme-calendar-day theme-not-current-month tc-date-picker-day"
                      tabindex="-1"
                      type="button"
                    >
                      10
                    </button>
                  </td>
                  <td
                    class="theme-calendar-col"
                  >
                    <button
                      aria-label="Sunday 11 February 2007"
                      class="theme-calendar-day theme-not-current-month tc-date-picker-day"
                      tabindex="-1"
                      type="button"
                    >
                      11
                    </button>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
  <span
    class="CoralDivider"
  />
  <div
    class="theme-footer"
  >
    <button
      aria-label="Pick Today"
      class="btn-tertiary btn-info btn btn-default"
      tabindex="-1"
      type="button"
    >
      <span>
        Today
      </span>
    </button>
  </div>
</div>
`;
